Closed
Bug 1155185
Opened 11 years ago
Closed 11 years ago
IonMonkey MIPS: Fix build failure on MIPS; implement MacroAssemblerMIPS::convertInt32ToDouble(const BaseIndex& src, FloatRegister dest).
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: aleksandar.zlicic, Unassigned)
Details
Attachments
(1 file)
|
2.48 KB,
patch
|
rankov
:
review+
|
Details | Diff | Splinter Review |
Build fails with the following error:
/home/v8mips/work/Mozilla_simulator/mozilla-central/js/src/jit/MacroAssembler.cpp: In instantiation of ‘void js::jit::MacroAssembler::loadUnboxedProperty(T, JSValueType, js::jit::TypedOrValueRegister) [with T = js::jit::BaseIndex]’:
/home/v8mips/work/Mozilla_simulator/mozilla-central/js/src/jit/MacroAssembler.cpp:889:64: required from here
/home/v8mips/work/Mozilla_simulator/mozilla-central/js/src/jit/MacroAssembler.cpp:804:15: error: no matching function for call to ‘js::jit::MacroAssembler::convertInt32ToDouble(js::jit::BaseIndex&, js::jit::FloatRegister)’
| Reporter | ||
Comment 1•11 years ago
|
||
Attachment #8593364 -
Flags: review?(branislav.rankov)
Updated•11 years ago
|
Attachment #8593364 -
Flags: review?(branislav.rankov) → review+
| Reporter | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 2•11 years ago
|
||
Keywords: checkin-needed
Comment 3•11 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•