Bug 1155185 - IonMonkey MIPS: Fix build failure on MIPS; implement MacroAssemblerMIPS::convertInt32ToDouble(const BaseIndex& src, FloatRegister dest). r=rankov CLOSED TREE